cmake_minimum_required(VERSION 3.4)
project(build1)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
add_executable(build1 Builder.cpp)
target_link_libraries(build1)
enable_testing()
add_subdirectory(third-party/gtest)
add_executable(check tests/test.cpp)
target_link_libraries(check gtest_main)
add_executable(check tests/test.cpp)
target_link_libraries(check gtest_main)
add_executable(check tests/test.cpp)
target_link_libraries(check3 gtest_main)
add_test(NAME check COMMAND check)
add_test(NAME check COMMAND check)
add_test(NAME check COMMAND check)
include(CPackConfig.cmake)
